# brightmatter

./: .env.example  .gitignore  .replit  BRIGHTMATTER_DEEP_DIVE.md  BRIGHTMATTER_INTEGRATION.md  BRIGHTMATTER_VERI_STATUS.md  PLAN.md  api.py  brightmatter-architecture-simple.excalidraw  brightmatter-architecture.excalidraw  dashboard.html  deploy-processors.sh  modal_app.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  rpk.yaml  schema.sql  sync_workspace.py  tsconfig.json  worker.py
attached_assets/: Pasted--Updated-Implementation-Plan-with-Firebase-Structure-Perfect-Now-I-have-the-critical-information--1753120409795_1753120409796.txt  Pasted--taskDefinitionArn-arn-aws-ecs-us-east-1-724772055314-task-definition-social-auth-processor-8-1753125240063_1753125240064.txt
brightmatter/: __init__.py  __main__.py  benchmarks.py  cli.py  config.py  thresholds.py
config/: account_overrides.yaml  seasonal_baselines.yaml  thresholds.yaml  vertical_benchmarks.yaml
docs/: API.md  FRONTEND_INTEGRATION.md  README.md  api-reference.md  brightmatter-live-state.md  brightmatter-proactive.md  detector-validation-2026-06.md  event-types.md  examples.md  ga4-depth-findings-2026-06.md  ga4-ingestion-findings-2026-06.md  ga4-phase-1-completion-2026-06.md  ga4-phase-1-findings-2026-06.md  getting-started.md  observability-and-benchmarking.md  payload-templates.md  phase-2-findings-2026-06.md  phase-3-findings-2026-06.md  phase-3-prereqs-2026-06.md  phase-4-5-findings-2026-06.md  phase-4-75-findings-2026-06.md  phase-4-findings-2026-06.md  phase-4-live-state.md  phase-5-findings-2026-06.md  phase-6-75-fix-and-phase-7-findings-2026-06.md  phase-6-findings-2026-06.md  sdk-integration.md  verification-layer-findings-2026-07.md
lib/: __init__.py  airtable_publisher.py  bigquery_client.py  client.py  firebase_client.py  intelligence_bridge.py  memory_health.py  (+3 more)
(+303 files in other folders)
