[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brightmatter"
version = "0.2.0"
description = "BrightMatter — Google Ads pattern recognition engine across 500 accounts"
requires-python = ">=3.11"
dependencies = [
    "google-ads>=25.0.0",
    "duckdb>=1.1.0",
    "pydantic>=2.9.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "ruptures>=1.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
brightmatter = "brightmatter.cli:main"

[tool.setuptools.packages.find]
include = ["brightmatter*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
